fixed flickering

--- a/css/custom.css
+++ b/css/custom.css
@@ -143,13 +143,13 @@
     transform: translate(0%, 0%);
   }
   25% {
-    transform: translate(10%, -15%);
+    transform: translate(0%, -15%);
   }
   50% {
-    transform: translate(20%, -5%);
+    transform: translate(0%, -5%);
   }
   75% {
-    transform: translate(10%, -7%);
+    transform: translate(0%, -7%);
   }
   100% {
     transform: translate(0%, 0%);
@@ -160,13 +160,13 @@
     -webkit-transform: translate(0%, 0%);
   }
   25% {
-    -webkit-transform: translate(10%, 15%);
+    -webkit-transform: translate(0%, 15%);
   }
   50% {
-    -webkit-transform: translate(20%, 5%);
+    -webkit-transform: translate(0%, 5%);
   }
   75% {
-    -webkit-transform: translate(10%, 15%);
+    -webkit-transform: translate(0%, 15%);
   }
   100% {
     -webkit-transform: translate(0%, 0%);
